# flask-notes-app

./: .gitignore  pyproject.toml
website/: auth.py  database.db  views.py
website/templates/: about.html  base.html  bugs.html  changelog.html  deleteaccount.html  help.html  home.html  update_account.html
